Upgrade to Spring 7
Co-authored-by: Copilot <copilot@github.com>