@@ -20,7 +20,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 import org.springframework.lang.Nullable;
 
@@ -37,7 +36,8 @@ import ch.rasc.wamp2spring.message.YieldMessage;
 import ch.rasc.wamp2spring.util.IdGenerator;
 
 public class ProcedureRegistry {
-	private final static AtomicLong lastRegistration = new AtomicLong(1L);
+
+	private final AtomicLong lastRegistration = new AtomicLong(1L);
 
 	private final Map<String, Procedure> procedures = new ConcurrentHashMap<>();
 
@@ -65,36 +65,32 @@ public class ProcedureRegistry {
 	}
 
 	synchronized UnregisterResult unregister(UnregisterMessage unregisterMessage) {
-		String procedure = this.registrations
-				.remove(unregisterMessage.getRegistrationId());
+		String procedure = this.registrations.remove(unregisterMessage.getRegistrationId());
 
 		if (procedure != null) {
 			Procedure proc = this.procedures.remove(procedure);
-			return new UnregisterResult(true, proc,
-					createErrorsForPendingInvocations(proc));
+			return new UnregisterResult(true, proc, createErrorsForPendingInvocations(proc));
 		}
 
 		return new UnregisterResult(false, null);
 	}
 
-	synchronized List<UnregisterResult> unregisterWebSocketSession(
-			String webSocketSessionId) {
+	synchronized List<UnregisterResult> unregisterWebSocketSession(String webSocketSessionId) {
 
 		List<UnregisterResult> unregisterResults = new ArrayList<>();
 
-		List<Procedure> toRemoveProcedures = this.procedures.values().stream()
-				.filter(proc -> proc.getWebSocketSessionId().equals(webSocketSessionId))
-				.collect(Collectors.toList());
+		List<Procedure> toRemoveProcedures = this.procedures.values()
+			.stream()
+			.filter(proc -> proc.getWebSocketSessionId().equals(webSocketSessionId))
+			.toList();
 
 		for (Procedure proc : toRemoveProcedures) {
 			this.procedures.remove(proc.getProcedure());
 			this.registrations.remove(proc.getRegistrationId());
 
-			List<ErrorMessage> errorsForPendingInvocations = createErrorsForPendingInvocations(
-					proc);
+			List<ErrorMessage> errorsForPendingInvocations = createErrorsForPendingInvocations(proc);
 
-			UnregisterResult result = new UnregisterResult(true, proc,
-					errorsForPendingInvocations);
+			UnregisterResult result = new UnregisterResult(true, proc, errorsForPendingInvocations);
 			unregisterResults.add(result);
 		}
 
@@ -104,20 +100,17 @@ public class ProcedureRegistry {
 	private static List<ErrorMessage> createErrorsForPendingInvocations(Procedure proc) {
 		List<ErrorMessage> errorMessages = new ArrayList<>();
 		for (Long invocationRequestId : proc.getPendingInvocations()) {
-			errorMessages.add(new ErrorMessage(InvocationMessage.CODE,
-					invocationRequestId,
+			errorMessages.add(new ErrorMessage(InvocationMessage.CODE, invocationRequestId,
 					WampError.NO_SUCH_REGISTRATION.getExternalValue(), null, null));
 		}
 		return errorMessages;
 	}
 
-	WampMessage createInvocationMessage(CallMessage callMessage) {
+	synchronized WampMessage createInvocationMessage(CallMessage callMessage) {
 		Procedure procedure = this.procedures.get(callMessage.getProcedure());
 		if (procedure != null) {
-			InvocationMessage invocationMessage = new InvocationMessage(procedure,
-					callMessage);
-			this.pendingInvocations.put(invocationMessage.getRequestId(),
-					new CallProc(callMessage, procedure));
+			InvocationMessage invocationMessage = new InvocationMessage(procedure, callMessage);
+			this.pendingInvocations.put(invocationMessage.getRequestId(), new CallProc(callMessage, procedure));
 			procedure.addPendingInvocation(invocationMessage.getRequestId());
 			return invocationMessage;
 		}
@@ -126,7 +119,7 @@ public class ProcedureRegistry {
 	}
 
 	@Nullable
-	CallMessage removeInvocationCall(WampMessage yieldOrErrorMessage) {
+	synchronized CallMessage removeInvocationCall(WampMessage yieldOrErrorMessage) {
 		long requestId;
 		if (yieldOrErrorMessage instanceof YieldMessage) {
 			requestId = ((YieldMessage) yieldOrErrorMessage).getRequestId();
@@ -148,12 +141,16 @@ public class ProcedureRegistry {
 	}
 
 	static class CallProc {
+
 		CallMessage callMessage;
+
 		Procedure procedure;
 
 		public CallProc(CallMessage callMessage, Procedure procedure) {
 			this.callMessage = callMessage;
 			this.procedure = procedure;
 		}
+
 	}
+
 }
