@@ -54,20 +54,15 @@ public class SubscriptionRegistryTest {
 
 	@Test
 	public void testEmptyRegistry() {
-		EnumMap<MatchPolicy, List<Long>> m = this.subscriptionRegistry
-				.listSubscriptions();
+		EnumMap<MatchPolicy, List<Long>> m = this.subscriptionRegistry.listSubscriptions();
 		assertThat(m.get(MatchPolicy.EXACT)).isEmpty();
 		assertThat(m.get(MatchPolicy.PREFIX)).isEmpty();
 		assertThat(m.get(MatchPolicy.WILDCARD)).isEmpty();
 
 		assertThat(this.subscriptionRegistry.lookupSubscription("aTopic", null)).isNull();
-		assertThat(
-				this.subscriptionRegistry.lookupSubscription("aTopic", MatchPolicy.EXACT))
-						.isNull();
-		assertThat(this.subscriptionRegistry.lookupSubscription("aTopic",
-				MatchPolicy.PREFIX)).isNull();
-		assertThat(this.subscriptionRegistry.lookupSubscription("aTopic",
-				MatchPolicy.WILDCARD)).isNull();
+		assertThat(this.subscriptionRegistry.lookupSubscription("aTopic", MatchPolicy.EXACT)).isNull();
+		assertThat(this.subscriptionRegistry.lookupSubscription("aTopic", MatchPolicy.PREFIX)).isNull();
+		assertThat(this.subscriptionRegistry.lookupSubscription("aTopic", MatchPolicy.WILDCARD)).isNull();
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("aTopic")).isEmpty();
 		assertThat(this.subscriptionRegistry.getSubscription(1L)).isNull();
@@ -84,8 +79,7 @@ public class SubscriptionRegistryTest {
 
 		SubscribeResult result = this.subscriptionRegistry.subscribe(subscribeMessage);
 		assertThat(result.getWampSessionId()).isEqualTo(123L);
-		assertThat(result.getSubscription().getMatchPolicy())
-				.isEqualTo(MatchPolicy.EXACT);
+		assertThat(result.getSubscription().getMatchPolicy()).isEqualTo(MatchPolicy.EXACT);
 		assertThat(result.getSubscription().getCreatedTimeMillis()).isGreaterThan(0);
 		assertThat(result.getSubscription().getEventListenerHandlerMethods()).isNull();
 		assertThat(result.getSubscription().getSubscribers()).hasSize(1);
@@ -93,12 +87,11 @@ public class SubscriptionRegistryTest {
 		assertThat(result.isCreated()).isTrue();
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result.getSubscription().getSubscriptionId(), 123L);
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result.getSubscription().getSubscriptionId());
+			.containsExactly(result.getSubscription().getSubscriptionId());
 	}
 
 	@Test
@@ -110,28 +103,24 @@ public class SubscriptionRegistryTest {
 		SubscribeResult result = this.subscriptionRegistry.subscribe(subscribeMessage);
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result.getSubscription().getSubscriptionId(), 123L);
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result.getSubscription().getSubscriptionId());
+			.containsExactly(result.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topica")).isEmpty();
 
-		UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(3,
-				result.getSubscription().getSubscriptionId());
+		UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(3, result.getSubscription().getSubscriptionId());
 		unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
-		UnsubscribeResult uresult = this.subscriptionRegistry
-				.unsubscribe(unsubscribeMessage);
+		UnsubscribeResult uresult = this.subscriptionRegistry.unsubscribe(unsubscribeMessage);
 		assertThat(uresult.getError()).isNull();
 		assertThat(uresult.isDeleted()).isTrue();
 		assertThat(uresult.getWampSessionId()).isEqualTo(123L);
-		assertThat(uresult.getSubscription().getMatchPolicy())
-				.isEqualTo(MatchPolicy.EXACT);
+		assertThat(uresult.getSubscription().getMatchPolicy()).isEqualTo(MatchPolicy.EXACT);
 		assertThat(uresult.getSubscription().getSubscriptionId())
-				.isEqualTo(result.getSubscription().getSubscriptionId());
+			.isEqualTo(result.getSubscription().getSubscriptionId());
 		assertThat(uresult.getSubscription().getTopic()).isEqualTo("topic");
 		assertThat(uresult.getSubscription().getSubscribers()).isEmpty();
 
@@ -154,137 +143,112 @@ public class SubscriptionRegistryTest {
 		SubscribeResult result2 = this.subscriptionRegistry.subscribe(subscribeMessage);
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result1.getSubscription().getSubscriptionId(), 123L);
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result2.getSubscription().getSubscriptionId(), 321L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result1.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result2.getSubscription().getSubscriptionId(), 321L);
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result1.getSubscription().getSubscriptionId());
+			.containsExactly(result1.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result2.getSubscription().getSubscriptionId());
+			.containsExactly(result2.getSubscription().getSubscriptionId());
 
 		UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(3,
 				result1.getSubscription().getSubscriptionId());
 		unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "1");
 
-		UnsubscribeResult uresult = this.subscriptionRegistry
-				.unsubscribe(unsubscribeMessage);
+		UnsubscribeResult uresult = this.subscriptionRegistry.unsubscribe(unsubscribeMessage);
 		assertThat(uresult.getError()).isNull();
 		assertThat(uresult.isDeleted()).isFalse();
 		assertThat(uresult.getWampSessionId()).isEqualTo(123L);
-		assertThat(uresult.getSubscription().getMatchPolicy())
-				.isEqualTo(MatchPolicy.EXACT);
+		assertThat(uresult.getSubscription().getMatchPolicy()).isEqualTo(MatchPolicy.EXACT);
 		assertThat(uresult.getSubscription().getSubscriptionId())
-				.isEqualTo(result1.getSubscription().getSubscriptionId());
+			.isEqualTo(result1.getSubscription().getSubscriptionId());
 		assertThat(uresult.getSubscription().getTopic()).isEqualTo("topic");
 		assertThat(uresult.getSubscription().getSubscribers()).hasSize(1);
 
 		ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result2.getSubscription().getSubscriptionId(), 321L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result2.getSubscription().getSubscriptionId(), 321L);
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result2.getSubscription().getSubscriptionId());
+			.containsExactly(result2.getSubscription().getSubscriptionId());
 	}
 
 	@Test
 	public void testSubscribeUnsubscribePrefix() {
-		SubscribeMessage subscribeMessage = new SubscribeMessage(1,
-				"com.myapp.topic.emergency", MatchPolicy.PREFIX);
+		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp.topic.emergency", MatchPolicy.PREFIX);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
 		SubscribeResult result = this.subscriptionRegistry.subscribe(subscribeMessage);
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.topic.emergency",
-				result.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.topic.emergency", result.getSubscription().getSubscriptionId(),
+				123L);
 		assertRegistry(ra);
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency.11"))
-						.containsExactly(result.getSubscription().getSubscriptionId());
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge"))
-						.isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.11"))
+			.containsExactly(result.getSubscription().getSubscriptionId());
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge")).isEmpty();
 
-		UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(3,
-				result.getSubscription().getSubscriptionId());
+		UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(3, result.getSubscription().getSubscriptionId());
 		unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
-		UnsubscribeResult uresult = this.subscriptionRegistry
-				.unsubscribe(unsubscribeMessage);
+		UnsubscribeResult uresult = this.subscriptionRegistry.unsubscribe(unsubscribeMessage);
 		assertThat(uresult.isDeleted()).isTrue();
 		assertThat(uresult.getError()).isNull();
 		assertThat(uresult.getWampSessionId()).isEqualTo(123L);
-		assertThat(uresult.getSubscription().getMatchPolicy())
-				.isEqualTo(MatchPolicy.PREFIX);
+		assertThat(uresult.getSubscription().getMatchPolicy()).isEqualTo(MatchPolicy.PREFIX);
 		assertThat(uresult.getSubscription().getSubscriptionId())
-				.isEqualTo(result.getSubscription().getSubscriptionId());
-		assertThat(uresult.getSubscription().getTopic())
-				.isEqualTo("com.myapp.topic.emergency");
+			.isEqualTo(result.getSubscription().getSubscriptionId());
+		assertThat(uresult.getSubscription().getTopic()).isEqualTo("com.myapp.topic.emergency");
 		assertThat(uresult.getSubscription().getSubscribers()).isEmpty();
 
 		ra = new RegistryAssert();
 		assertRegistry(ra);
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency.11")).isEmpty();
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge"))
-						.isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.11")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge")).isEmpty();
 	}
 
 	@Test
 	public void testSubscribeUnsubscribeWildcard() {
-		SubscribeMessage subscribeMessage = new SubscribeMessage(1,
-				"com.myapp..userevent", MatchPolicy.WILDCARD);
+		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp..userevent", MatchPolicy.WILDCARD);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
 		SubscribeResult result = this.subscriptionRegistry.subscribe(subscribeMessage);
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.WILDCARD, "com.myapp..userevent",
-				result.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.WILDCARD, "com.myapp..userevent", result.getSubscription().getSubscriptionId(),
+				123L);
 		assertRegistry(ra);
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent"))
-						.containsExactly(result.getSubscription().getSubscriptionId());
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent"))
+			.containsExactly(result.getSubscription().getSubscriptionId());
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
 
-		UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(3,
-				result.getSubscription().getSubscriptionId());
+		UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(3, result.getSubscription().getSubscriptionId());
 		unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
-		UnsubscribeResult uresult = this.subscriptionRegistry
-				.unsubscribe(unsubscribeMessage);
+		UnsubscribeResult uresult = this.subscriptionRegistry.unsubscribe(unsubscribeMessage);
 		assertThat(uresult.isDeleted()).isTrue();
 		assertThat(uresult.getError()).isNull();
 		assertThat(uresult.getWampSessionId()).isEqualTo(123L);
-		assertThat(uresult.getSubscription().getMatchPolicy())
-				.isEqualTo(MatchPolicy.WILDCARD);
+		assertThat(uresult.getSubscription().getMatchPolicy()).isEqualTo(MatchPolicy.WILDCARD);
 		assertThat(uresult.getSubscription().getSubscriptionId())
-				.isEqualTo(result.getSubscription().getSubscriptionId());
-		assertThat(uresult.getSubscription().getTopic())
-				.isEqualTo("com.myapp..userevent");
+			.isEqualTo(result.getSubscription().getSubscriptionId());
+		assertThat(uresult.getSubscription().getTopic()).isEqualTo("com.myapp..userevent");
 		assertThat(uresult.getSubscription().getSubscribers()).isEmpty();
 
 		ra = new RegistryAssert();
 		assertRegistry(ra);
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent")).isEmpty();
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
 	}
 
 	@Test
@@ -300,17 +264,16 @@ public class SubscriptionRegistryTest {
 		SubscribeResult result2 = this.subscriptionRegistry.subscribe(subscribeMessage);
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result1.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result1.getSubscription().getSubscriptionId(), 123L);
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result1.getSubscription().getSubscriptionId());
+			.containsExactly(result1.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result2.getSubscription().getSubscriptionId());
+			.containsExactly(result2.getSubscription().getSubscriptionId());
 
 		assertThat(result1.getSubscription().getSubscriptionId())
-				.isEqualTo(result2.getSubscription().getSubscriptionId());
+			.isEqualTo(result2.getSubscription().getSubscriptionId());
 	}
 
 	@Test
@@ -321,8 +284,7 @@ public class SubscriptionRegistryTest {
 		SubscribeResult result1 = this.subscriptionRegistry.subscribe(subscribeMessage);
 
 		assertThat(result1.getWampSessionId()).isEqualTo(123L);
-		assertThat(result1.getSubscription().getMatchPolicy())
-				.isEqualTo(MatchPolicy.EXACT);
+		assertThat(result1.getSubscription().getMatchPolicy()).isEqualTo(MatchPolicy.EXACT);
 		assertThat(result1.getSubscription().getCreatedTimeMillis()).isGreaterThan(0);
 		assertThat(result1.getSubscription().getEventListenerHandlerMethods()).isNull();
 		assertThat(result1.getSubscription().getSubscribers()).hasSize(1);
@@ -335,8 +297,7 @@ public class SubscriptionRegistryTest {
 		SubscribeResult result2 = this.subscriptionRegistry.subscribe(subscribeMessage);
 
 		assertThat(result2.getWampSessionId()).isEqualTo(321L);
-		assertThat(result2.getSubscription().getMatchPolicy())
-				.isEqualTo(MatchPolicy.EXACT);
+		assertThat(result2.getSubscription().getMatchPolicy()).isEqualTo(MatchPolicy.EXACT);
 		assertThat(result2.getSubscription().getCreatedTimeMillis()).isGreaterThan(0);
 		assertThat(result2.getSubscription().getEventListenerHandlerMethods()).isNull();
 		assertThat(result2.getSubscription().getSubscribers()).hasSize(2);
@@ -344,16 +305,14 @@ public class SubscriptionRegistryTest {
 		assertThat(result2.isCreated()).isFalse();
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result1.getSubscription().getSubscriptionId(), 123L);
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result2.getSubscription().getSubscriptionId(), 321L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result1.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result2.getSubscription().getSubscriptionId(), 321L);
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result1.getSubscription().getSubscriptionId());
+			.containsExactly(result1.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result2.getSubscription().getSubscriptionId());
+			.containsExactly(result2.getSubscription().getSubscriptionId());
 	}
 
 	@Test
@@ -371,22 +330,19 @@ public class SubscriptionRegistryTest {
 		assertThat(result2.isCreated()).isTrue();
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.EXACT, "topic",
-				result1.getSubscription().getSubscriptionId(), 123L);
-		ra.addSubscriber(MatchPolicy.EXACT, "topic.second",
-				result2.getSubscription().getSubscriptionId(), 321L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic", result1.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "topic.second", result2.getSubscription().getSubscriptionId(), 321L);
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic"))
-				.containsExactly(result1.getSubscription().getSubscriptionId());
+			.containsExactly(result1.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("topic.second"))
-				.containsExactly(result2.getSubscription().getSubscriptionId());
+			.containsExactly(result2.getSubscription().getSubscriptionId());
 	}
 
 	@Test
 	public void testSubscribePrefix() {
-		SubscribeMessage subscribeMessage = new SubscribeMessage(1,
-				"com.myapp.topic.emergency", MatchPolicy.PREFIX);
+		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp.topic.emergency", MatchPolicy.PREFIX);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
@@ -395,32 +351,24 @@ public class SubscriptionRegistryTest {
 
 		RegistryAssert ra = new RegistryAssert();
 		long subscriptionId = result.getSubscription().getSubscriptionId();
-		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.topic.emergency", subscriptionId,
-				123L);
+		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.topic.emergency", subscriptionId, 123L);
 		assertRegistry(ra);
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency.11"))
-						.containsExactly(subscriptionId);
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency-low"))
-						.containsExactly(subscriptionId);
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency.category.severe"))
-						.containsExactly(subscriptionId);
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency"))
-						.containsExactly(subscriptionId);
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.11"))
+			.containsExactly(subscriptionId);
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency-low"))
+			.containsExactly(subscriptionId);
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.category.severe"))
+			.containsExactly(subscriptionId);
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency"))
+			.containsExactly(subscriptionId);
 
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge"))
-						.isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge")).isEmpty();
 	}
 
 	@Test
 	public void testSubscribeWildcard() {
-		SubscribeMessage subscribeMessage = new SubscribeMessage(1,
-				"com.myapp..userevent", MatchPolicy.WILDCARD);
+		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp..userevent", MatchPolicy.WILDCARD);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
@@ -429,26 +377,19 @@ public class SubscriptionRegistryTest {
 
 		RegistryAssert ra = new RegistryAssert();
 		long subscriptionId = result.getSubscription().getSubscriptionId();
-		ra.addSubscriber(MatchPolicy.WILDCARD, "com.myapp..userevent", subscriptionId,
-				123L);
+		ra.addSubscriber(MatchPolicy.WILDCARD, "com.myapp..userevent", subscriptionId, 123L);
 		assertRegistry(ra);
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent"))
-						.containsExactly(subscriptionId);
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.bar.userevent"))
-						.containsExactly(subscriptionId);
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.a12.userevent"))
-						.containsExactly(subscriptionId);
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent"))
+			.containsExactly(subscriptionId);
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.bar.userevent"))
+			.containsExactly(subscriptionId);
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.a12.userevent"))
+			.containsExactly(subscriptionId);
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
-		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.user"))
-				.isEmpty();
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp2.foo.userevent")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.user")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp2.foo.userevent")).isEmpty();
 	}
 
 	@Test
@@ -457,8 +398,7 @@ public class SubscriptionRegistryTest {
 		unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
-		UnsubscribeResult uresult = this.subscriptionRegistry
-				.unsubscribe(unsubscribeMessage);
+		UnsubscribeResult uresult = this.subscriptionRegistry.unsubscribe(unsubscribeMessage);
 		assertThat(uresult.getError()).isEqualTo(WampError.NO_SUCH_SUBSCRIPTION);
 		assertThat(uresult.getWampSessionId()).isEqualTo(123L);
 		assertThat(uresult.getSubscription()).isNull();
@@ -468,73 +408,54 @@ public class SubscriptionRegistryTest {
 	public void testAllInOne() {
 		Random random = new Random();
 		String[] topics = { "help", "com.myapp..userevent", "com.myapp.topic.emergency" };
-		MatchPolicy[] matchPolicy = { MatchPolicy.EXACT, MatchPolicy.WILDCARD,
-				MatchPolicy.PREFIX };
+		MatchPolicy[] matchPolicy = { MatchPolicy.EXACT, MatchPolicy.WILDCARD, MatchPolicy.PREFIX };
 
 		List<UnsubscribeMessage> unsubs = new ArrayList<>();
 
 		RegistryAssert ra = new RegistryAssert();
 		for (int i = 0; i < 10_000; i++) {
 			int ix = random.nextInt(3);
-			SubscribeMessage subscribeMessage = new SubscribeMessage(i + 1, topics[ix],
-					matchPolicy[ix]);
-			subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID,
-					Long.valueOf(500_000 + i));
+			SubscribeMessage subscribeMessage = new SubscribeMessage(i + 1, topics[ix], matchPolicy[ix]);
+			subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, Long.valueOf(500_000 + i));
 			subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "ws" + i);
 
-			SubscribeResult result = this.subscriptionRegistry
-					.subscribe(subscribeMessage);
+			SubscribeResult result = this.subscriptionRegistry.subscribe(subscribeMessage);
 
-			ra.addSubscriber(matchPolicy[ix], topics[ix],
-					result.getSubscription().getSubscriptionId(),
+			ra.addSubscriber(matchPolicy[ix], topics[ix], result.getSubscription().getSubscriptionId(),
 					Long.valueOf(500_000 + i));
 
 			UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(700_000 + i,
 					result.getSubscription().getSubscriptionId());
-			unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID,
-					Long.valueOf(500_000 + i));
-			unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID,
-					"ws" + i);
+			unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, Long.valueOf(500_000 + i));
+			unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "ws" + i);
 			unsubs.add(unsubscribeMessage);
 		}
 		assertRegistry(ra);
 
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("help"))
-				.containsExactly(ra.subscriptionId(topics[0], matchPolicy[0]));
+			.containsExactly(ra.subscriptionId(topics[0], matchPolicy[0]));
 		assertThat(this.subscriptionRegistry.hasSubscribers("help")).isTrue();
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("helpa")).isEmpty();
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent"))
-						.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.bar.userevent"))
-						.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.a12.userevent"))
-						.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
-		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.user"))
-				.isEmpty();
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp2.foo.userevent")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent"))
+			.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.bar.userevent"))
+			.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.a12.userevent"))
+			.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.user")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp2.foo.userevent")).isEmpty();
 
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency.11"))
-						.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency-low"))
-						.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency.category.severe"))
-						.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
-		assertThat(this.subscriptionRegistry
-				.getMatchSubscriptions("com.myapp.topic.emergency"))
-						.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.11"))
+			.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency-low"))
+			.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.category.severe"))
+			.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency"))
+			.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
 
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge"))
-						.isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge")).isEmpty();
 
 		for (UnsubscribeMessage unsub : unsubs) {
 			UnsubscribeResult uresult = this.subscriptionRegistry.unsubscribe(unsub);
@@ -553,8 +474,7 @@ public class SubscriptionRegistryTest {
 		Random random = new Random();
 
 		String[] topics = { "help", "com.myapp..userevent", "com.myapp.topic.emergency" };
-		MatchPolicy[] matchPolicy = { MatchPolicy.EXACT, MatchPolicy.WILDCARD,
-				MatchPolicy.PREFIX };
+		MatchPolicy[] matchPolicy = { MatchPolicy.EXACT, MatchPolicy.WILDCARD, MatchPolicy.PREFIX };
 
 		List<UnsubscribeMessage> unsubs = new ArrayList<>();
 		List<Integer> ixs = new ArrayList<>();
@@ -562,26 +482,20 @@ public class SubscriptionRegistryTest {
 		RegistryAssert ra = new RegistryAssert();
 		for (int i = 0; i < 2_000; i++) {
 			int ix = random.nextInt(3);
-			SubscribeMessage subscribeMessage = new SubscribeMessage(i + 1, topics[ix],
-					matchPolicy[ix]);
-			subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID,
-					Long.valueOf(500_000 + i));
+			SubscribeMessage subscribeMessage = new SubscribeMessage(i + 1, topics[ix], matchPolicy[ix]);
+			subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, Long.valueOf(500_000 + i));
 			subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "ws" + i);
 
-			SubscribeResult result = this.subscriptionRegistry
-					.subscribe(subscribeMessage);
+			SubscribeResult result = this.subscriptionRegistry.subscribe(subscribeMessage);
 
-			ra.addSubscriber(matchPolicy[ix], topics[ix],
-					result.getSubscription().getSubscriptionId(),
+			ra.addSubscriber(matchPolicy[ix], topics[ix], result.getSubscription().getSubscriptionId(),
 					Long.valueOf(500_000 + i));
 
 			ixs.add(ix);
 			UnsubscribeMessage unsubscribeMessage = new UnsubscribeMessage(700_000 + i,
 					result.getSubscription().getSubscriptionId());
-			unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID,
-					Long.valueOf(500_000 + i));
-			unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID,
-					"ws" + i);
+			unsubscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, Long.valueOf(500_000 + i));
+			unsubscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "ws" + i);
 			unsubs.add(unsubscribeMessage);
 		}
 
@@ -589,45 +503,29 @@ public class SubscriptionRegistryTest {
 		sw.start();
 		for (int i = 0; i < 100_000; i++) {
 			assertThat(this.subscriptionRegistry.getMatchSubscriptions("help"))
-					.containsExactly(ra.subscriptionId(topics[0], matchPolicy[0]));
+				.containsExactly(ra.subscriptionId(topics[0], matchPolicy[0]));
 			assertThat(this.subscriptionRegistry.hasSubscribers("help")).isTrue();
-			assertThat(this.subscriptionRegistry.getMatchSubscriptions("helpa"))
-					.isEmpty();
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.foo.userevent")).containsExactly(
-							ra.subscriptionId(topics[1], matchPolicy[1]));
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.bar.userevent")).containsExactly(
-							ra.subscriptionId(topics[1], matchPolicy[1]));
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.a12.userevent")).containsExactly(
-							ra.subscriptionId(topics[1], matchPolicy[1]));
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
-			assertThat(
-					this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.user"))
-							.isEmpty();
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp2.foo.userevent")).isEmpty();
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("helpa")).isEmpty();
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent"))
+				.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.bar.userevent"))
+				.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.a12.userevent"))
+				.containsExactly(ra.subscriptionId(topics[1], matchPolicy[1]));
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.userevent.bar")).isEmpty();
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.foo.user")).isEmpty();
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp2.foo.userevent")).isEmpty();
 
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.topic.emergency.11"))
-							.containsExactly(
-									ra.subscriptionId(topics[2], matchPolicy[2]));
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.topic.emergency-low"))
-							.containsExactly(
-									ra.subscriptionId(topics[2], matchPolicy[2]));
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.topic.emergency.category.severe"))
-							.containsExactly(
-									ra.subscriptionId(topics[2], matchPolicy[2]));
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.topic.emergency")).containsExactly(
-							ra.subscriptionId(topics[2], matchPolicy[2]));
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.11"))
+				.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency-low"))
+				.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency.category.severe"))
+				.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emergency"))
+				.containsExactly(ra.subscriptionId(topics[2], matchPolicy[2]));
 
-			assertThat(this.subscriptionRegistry
-					.getMatchSubscriptions("com.myapp.topic.emerge")).isEmpty();
+			assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.topic.emerge")).isEmpty();
 		}
 		sw.stop();
 		System.out.println(sw.prettyPrint());
@@ -635,8 +533,8 @@ public class SubscriptionRegistryTest {
 		int c = 0;
 		for (Integer ix : ixs) {
 			UnsubscribeMessage unsubMessage = unsubs.get(c);
-			ra.removeSubscriber(matchPolicy[ix], topics[ix],
-					unsubMessage.getSubscriptionId(), unsubMessage.getWampSessionId());
+			ra.removeSubscriber(matchPolicy[ix], topics[ix], unsubMessage.getSubscriptionId(),
+					unsubMessage.getWampSessionId());
 			this.subscriptionRegistry.unsubscribe(unsubMessage);
 			c++;
 
@@ -651,15 +549,12 @@ public class SubscriptionRegistryTest {
 		for (int i = 0; i < 10_000; i++) {
 
 			SubscribeMessage subscribeMessage = new SubscribeMessage(i + 1, "topic." + i);
-			subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID,
-					Long.valueOf(500_000 + i));
+			subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, Long.valueOf(500_000 + i));
 			subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "ws" + i);
 
-			SubscribeResult result = this.subscriptionRegistry
-					.subscribe(subscribeMessage);
+			SubscribeResult result = this.subscriptionRegistry.subscribe(subscribeMessage);
 
-			ra.addSubscriber(MatchPolicy.EXACT, "topic." + i,
-					result.getSubscription().getSubscriptionId(),
+			ra.addSubscriber(MatchPolicy.EXACT, "topic." + i, result.getSubscription().getSubscriptionId(),
 					Long.valueOf(500_000 + i));
 		}
 		assertRegistry(ra);
@@ -667,8 +562,7 @@ public class SubscriptionRegistryTest {
 
 	@Test
 	public void testRemoveWebSocketSessionOne() {
-		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp.user",
-				MatchPolicy.PREFIX);
+		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp.user", MatchPolicy.PREFIX);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
@@ -676,8 +570,7 @@ public class SubscriptionRegistryTest {
 		assertThat(result1.isCreated()).isTrue();
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user",
-				result1.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user", result1.getSubscription().getSubscriptionId(), 123L);
 
 		subscribeMessage = new SubscribeMessage(1, "com.myapp.test", MatchPolicy.EXACT);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
@@ -685,19 +578,16 @@ public class SubscriptionRegistryTest {
 
 		SubscribeResult result2 = this.subscriptionRegistry.subscribe(subscribeMessage);
 		assertThat(result2.isCreated()).isTrue();
-		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test",
-				result2.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test", result2.getSubscription().getSubscriptionId(), 123L);
 
 		assertRegistry(ra);
 
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error"))
-						.containsExactly(result1.getSubscription().getSubscriptionId());
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error"))
+			.containsExactly(result1.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.test"))
-				.containsExactly(result2.getSubscription().getSubscriptionId());
+			.containsExactly(result2.getSubscription().getSubscriptionId());
 
-		List<UnsubscribeResult> results = this.subscriptionRegistry
-				.removeWebSocketSessionId("one", 123L);
+		List<UnsubscribeResult> results = this.subscriptionRegistry.removeWebSocketSessionId("one", 123L);
 		assertThat(results).hasSize(2);
 		assertThat(results.get(0).getError()).isNull();
 		assertThat(results.get(1).getError()).isNull();
@@ -707,17 +597,13 @@ public class SubscriptionRegistryTest {
 		ra = new RegistryAssert();
 		assertRegistry(ra);
 
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error"))
-						.isEmpty();
-		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.test"))
-				.isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error")).isEmpty();
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.test")).isEmpty();
 	}
 
 	@Test
 	public void testRemoveWebSocketSessionWithOthers() {
-		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp.user",
-				MatchPolicy.PREFIX);
+		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "com.myapp.user", MatchPolicy.PREFIX);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
@@ -725,8 +611,7 @@ public class SubscriptionRegistryTest {
 		assertThat(result1.isCreated()).isTrue();
 
 		RegistryAssert ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user",
-				result1.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user", result1.getSubscription().getSubscriptionId(), 123L);
 
 		subscribeMessage = new SubscribeMessage(2, "com.myapp.user", MatchPolicy.PREFIX);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 124L);
@@ -735,8 +620,7 @@ public class SubscriptionRegistryTest {
 		SubscribeResult resultO = this.subscriptionRegistry.subscribe(subscribeMessage);
 		assertThat(resultO.isCreated()).isFalse();
 
-		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user",
-				resultO.getSubscription().getSubscriptionId(), 124L);
+		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user", resultO.getSubscription().getSubscriptionId(), 124L);
 
 		subscribeMessage = new SubscribeMessage(3, "com.myapp.test", MatchPolicy.EXACT);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
@@ -744,8 +628,7 @@ public class SubscriptionRegistryTest {
 
 		SubscribeResult result2 = this.subscriptionRegistry.subscribe(subscribeMessage);
 		assertThat(result2.isCreated()).isTrue();
-		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test",
-				result2.getSubscription().getSubscriptionId(), 123L);
+		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test", result2.getSubscription().getSubscriptionId(), 123L);
 
 		subscribeMessage = new SubscribeMessage(4, "com.myapp.test", MatchPolicy.EXACT);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 124L);
@@ -753,19 +636,16 @@ public class SubscriptionRegistryTest {
 
 		SubscribeResult resultO2 = this.subscriptionRegistry.subscribe(subscribeMessage);
 		assertThat(resultO2.isCreated()).isFalse();
-		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test",
-				resultO2.getSubscription().getSubscriptionId(), 124L);
+		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test", resultO2.getSubscription().getSubscriptionId(), 124L);
 
 		assertRegistry(ra);
 
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error"))
-						.containsExactly(result1.getSubscription().getSubscriptionId());
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error"))
+			.containsExactly(result1.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.test"))
-				.containsExactly(result2.getSubscription().getSubscriptionId());
+			.containsExactly(result2.getSubscription().getSubscriptionId());
 
-		List<UnsubscribeResult> results = this.subscriptionRegistry
-				.removeWebSocketSessionId("one", 123L);
+		List<UnsubscribeResult> results = this.subscriptionRegistry.removeWebSocketSessionId("one", 123L);
 		assertThat(results).hasSize(2);
 		assertThat(results.get(0).getError()).isNull();
 		assertThat(results.get(1).getError()).isNull();
@@ -773,25 +653,22 @@ public class SubscriptionRegistryTest {
 		assertThat(results.get(1).isDeleted()).isFalse();
 
 		ra = new RegistryAssert();
-		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user",
-				resultO.getSubscription().getSubscriptionId(), 124L);
-		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test",
-				resultO2.getSubscription().getSubscriptionId(), 124L);
+		ra.addSubscriber(MatchPolicy.PREFIX, "com.myapp.user", resultO.getSubscription().getSubscriptionId(), 124L);
+		ra.addSubscriber(MatchPolicy.EXACT, "com.myapp.test", resultO2.getSubscription().getSubscriptionId(), 124L);
 		assertRegistry(ra);
 
-		assertThat(
-				this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error"))
-						.containsExactly(resultO.getSubscription().getSubscriptionId());
+		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.user.error"))
+			.containsExactly(resultO.getSubscription().getSubscriptionId());
 		assertThat(this.subscriptionRegistry.getMatchSubscriptions("com.myapp.test"))
-				.containsExactly(resultO2.getSubscription().getSubscriptionId());
+			.containsExactly(resultO2.getSubscription().getSubscriptionId());
 	}
 
 	@Test
 	public void testSubscribeEventHandlers() throws NoSuchMethodException {
 		InvocableHandlerMethod handlerMethod = new InvocableHandlerMethod(
 				new HandlerMethod(this, "testSubscribeEventHandlers"));
-		EventListenerInfo eli = new EventListenerInfo(handlerMethod,
-				new String[] { "one", "two", "three" }, MatchPolicy.EXACT);
+		EventListenerInfo eli = new EventListenerInfo(handlerMethod, new String[] { "one", "two", "three" },
+				MatchPolicy.EXACT);
 
 		this.subscriptionRegistry.subscribeEventHandlers(Collections.singletonList(eli));
 
@@ -810,30 +687,24 @@ public class SubscriptionRegistryTest {
 		assertThat(twoSub.iterator().next().getSubscribers()).isEmpty();
 		assertThat(threeSub.iterator().next().getSubscribers()).isEmpty();
 
-		assertThat(oneSub.iterator().next().getEventListenerHandlerMethods())
-				.containsExactly(handlerMethod);
-		assertThat(twoSub.iterator().next().getEventListenerHandlerMethods())
-				.containsExactly(handlerMethod);
-		assertThat(threeSub.iterator().next().getEventListenerHandlerMethods())
-				.containsExactly(handlerMethod);
+		assertThat(oneSub.iterator().next().getEventListenerHandlerMethods()).containsExactly(handlerMethod);
+		assertThat(twoSub.iterator().next().getEventListenerHandlerMethods()).containsExactly(handlerMethod);
+		assertThat(threeSub.iterator().next().getEventListenerHandlerMethods()).containsExactly(handlerMethod);
 	}
 
 	@Test
 	public void testSubscribeEventHandlersWithOthers() throws NoSuchMethodException {
 		InvocableHandlerMethod handlerMethod = new InvocableHandlerMethod(
 				new HandlerMethod(this, "testSubscribeEventHandlers"));
-		EventListenerInfo eli1 = new EventListenerInfo(handlerMethod,
-				new String[] { "one.two" }, MatchPolicy.EXACT);
-		EventListenerInfo eli2 = new EventListenerInfo(handlerMethod,
-				new String[] { "one" }, MatchPolicy.PREFIX);
+		EventListenerInfo eli1 = new EventListenerInfo(handlerMethod, new String[] { "one.two" }, MatchPolicy.EXACT);
+		EventListenerInfo eli2 = new EventListenerInfo(handlerMethod, new String[] { "one" }, MatchPolicy.PREFIX);
 
 		this.subscriptionRegistry.subscribeEventHandlers(Arrays.asList(eli1, eli2));
 
 		Set<Subscription> oneSub = this.subscriptionRegistry.findSubscriptions("one.two");
 		assertThat(oneSub).hasSize(2);
 
-		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "one",
-				MatchPolicy.PREFIX);
+		SubscribeMessage subscribeMessage = new SubscribeMessage(1, "one", MatchPolicy.PREFIX);
 		subscribeMessage.setHeader(WampMessageHeader.WAMP_SESSION_ID, 123L);
 		subscribeMessage.setHeader(WampMessageHeader.WEBSOCKET_SESSION_ID, "one");
 
@@ -842,20 +713,16 @@ public class SubscriptionRegistryTest {
 
 		oneSub = this.subscriptionRegistry.findSubscriptions("one.two");
 		assertThat(oneSub).hasSize(2);
-		Subscription sub = oneSub.stream().filter(s -> !s.getSubscribers().isEmpty())
-				.findFirst().orElse(null);
+		Subscription sub = oneSub.stream().filter(s -> !s.getSubscribers().isEmpty()).findFirst().orElse(null);
 		assertThat(sub.getEventListenerHandlerMethods()).containsExactly(handlerMethod);
 		assertThat(sub.getSubscribers()).hasSize(1);
-		sub = oneSub.stream().filter(s -> s.getSubscribers().isEmpty()).findFirst()
-				.orElse(null);
+		sub = oneSub.stream().filter(s -> s.getSubscribers().isEmpty()).findFirst().orElse(null);
 		assertThat(sub.getEventListenerHandlerMethods()).containsExactly(handlerMethod);
 	}
 
 	private void assertRegistry(RegistryAssert ra) {
-		EnumMap<MatchPolicy, List<Long>> subscriptions = this.subscriptionRegistry
-				.listSubscriptions();
-		assertThat(subscriptions).containsOnlyKeys(MatchPolicy.EXACT, MatchPolicy.PREFIX,
-				MatchPolicy.WILDCARD);
+		EnumMap<MatchPolicy, List<Long>> subscriptions = this.subscriptionRegistry.listSubscriptions();
+		assertThat(subscriptions).containsOnlyKeys(MatchPolicy.EXACT, MatchPolicy.PREFIX, MatchPolicy.WILDCARD);
 
 		for (MatchPolicy policy : MatchPolicy.values()) {
 			List<Long> subscriptionsId = ra.subscriptions(policy);
@@ -863,13 +730,10 @@ public class SubscriptionRegistryTest {
 
 			for (Long subscriptionId : subscriptionsId) {
 				Collection<Long> subscribers = ra.subscribers(subscriptionId);
-				assertThat(this.subscriptionRegistry.listSubscribers(subscriptionId))
-						.hasSameElementsAs(subscribers);
-				assertThat(this.subscriptionRegistry.countSubscribers(subscriptionId))
-						.isEqualTo(subscribers.size());
+				assertThat(this.subscriptionRegistry.listSubscribers(subscriptionId)).hasSameElementsAs(subscribers);
+				assertThat(this.subscriptionRegistry.countSubscribers(subscriptionId)).isEqualTo(subscribers.size());
 
-				SubscriptionDetail detail = this.subscriptionRegistry
-						.getSubscription(subscriptionId);
+				SubscriptionDetail detail = this.subscriptionRegistry.getSubscription(subscriptionId);
 				assertThat(detail.getCreatedTimeMillis()).isGreaterThan(0);
 				assertThat(detail.getId()).isEqualTo(subscriptionId);
 				assertThat(detail.getMatchPolicy()).isEqualTo(policy);
@@ -877,7 +741,7 @@ public class SubscriptionRegistryTest {
 			}
 
 			assertThat(this.subscriptionRegistry.lookupSubscription("topic", policy))
-					.isEqualTo(ra.subscriptionId("topic", policy));
+				.isEqualTo(ra.subscriptionId("topic", policy));
 		}
 
 		ra.topics().forEach(topic -> {
@@ -905,26 +769,23 @@ public class SubscriptionRegistryTest {
 			return null;
 		}
 
-		void addSubscriber(MatchPolicy match, String topic, long subscriptionId,
-				Long subscriberId) {
+		void addSubscriber(MatchPolicy match, String topic, long subscriptionId, Long subscriberId) {
 			Set<Long> subs = this.registry.computeIfAbsent(match, k -> new HashMap<>())
-					.computeIfAbsent(topic, k -> new HashMap<>())
-					.computeIfAbsent(subscriptionId, k -> new HashSet<>());
+				.computeIfAbsent(topic, k -> new HashMap<>())
+				.computeIfAbsent(subscriptionId, k -> new HashSet<>());
 			if (subscriberId != null) {
 				subs.add(subscriberId);
 			}
 		}
 
-		void removeSubscriber(MatchPolicy match, String topic, long subscriptionId,
-				Long subscriberId) {
+		void removeSubscriber(MatchPolicy match, String topic, long subscriptionId, Long subscriberId) {
 			Set<Long> subs = this.registry.computeIfAbsent(match, k -> new HashMap<>())
-					.computeIfAbsent(topic, k -> new HashMap<>())
-					.computeIfAbsent(subscriptionId, k -> new HashSet<>());
+				.computeIfAbsent(topic, k -> new HashMap<>())
+				.computeIfAbsent(subscriptionId, k -> new HashSet<>());
 			if (subscriberId != null) {
 				subs.remove(subscriberId);
 				if (subs.isEmpty()) {
-					this.registry.computeIfAbsent(match, k -> new HashMap<>())
-							.remove(topic);
+					this.registry.computeIfAbsent(match, k -> new HashMap<>()).remove(topic);
 				}
 			}
 		}
@@ -943,21 +804,24 @@ public class SubscriptionRegistryTest {
 		}
 
 		Collection<Long> subscribers(long subscriptionId) {
-			return this.registry.values().stream().flatMap(m -> m.values().stream())
-					.filter(m -> m.containsKey(subscriptionId)).findFirst()
-					.map(m -> m.get(subscriptionId)).orElse(Collections.emptySet());
+			return this.registry.values()
+				.stream()
+				.flatMap(m -> m.values().stream())
+				.filter(m -> m.containsKey(subscriptionId))
+				.findFirst()
+				.map(m -> m.get(subscriptionId))
+				.orElse(Set.of());
 
 		}
 
 		List<Long> subscriptions(MatchPolicy match) {
-			return this.registry.get(match).values().stream()
-					.flatMap(m -> m.keySet().stream()).collect(Collectors.toList());
+			return this.registry.get(match).values().stream().flatMap(m -> m.keySet().stream()).toList();
 		}
 
 		List<String> topics() {
-			return this.registry.values().stream().flatMap(m -> m.keySet().stream())
-					.collect(Collectors.toList());
+			return this.registry.values().stream().flatMap(m -> m.keySet().stream()).toList();
 		}
 
 	}
+
 }
